--- a/ex_song.html
+++ b/ex_song.html
@@ -5,25 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ex_song</title>
+    <style>
+        div {margin: 30px;}
+        #rab {color: red;}
+        #air {color: blue;}
+        #cow {color: brown;}
+        .rab {background-color: grey;
+            color: white;}
+        .air {background-color: aqua;}
+        .cow {background-color: black;
+            color: beige;}
+    </style>
 </head>
 <body>
-    <h1><a href="https://terms.naver.com/entry.naver?docId=3653210&cid=59416&categoryId=59416" target="_blank">산토끼</a></h1>
+    <h1><a href="https://terms.naver.com/entry.naver?docId=3653210&cid=59416&categoryId=59416" target="_blank" id="rab">산토끼</a></h1>
     <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fshop1.phinf.naver.net%2F20221021_8%2F1666329351635X8Pu5_JPEG%2F103833_1.jpg&type=sc960_832" alt="" width="300" height="200">
-    <p>산<b>토끼 토끼</b>야 어디로 가느냐<br/>
-    <b>깡총깡총</b> 뛰면서 어디를 <em>가느냐</em>
-    </p>
+    <div class="rab">
+        <p>산<b>토끼 토끼</b>야 어디로 가느냐<br/>
+        <b>깡총깡총</b> 뛰면서 어디를 <em>가느냐</em></p>
+    </div>
     <hr>
 
-    <h1><a href="https://terms.naver.com/entry.naver?docId=3615241&cid=59416&categoryId=59417" target="_blank">비행기</a></h1>
+    <h1><a href="https://terms.naver.com/entry.naver?docId=3615241&cid=59416&categoryId=59417" target="_blank" id="air">비행기</a></h1>
     <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2F20140528_39%2Fmetalslug200_1401255601668ta3Wt_JPEG%2F0412_13%25BD%25C359%25BA%25D0_CH9-1_%25B5%25CE%25B8%25AE%25B5%25D5%25BD%25C7_%25B9%25B6%25B0%25D4%25B0%25F8%25C7%25D7_2.MPG_20140414_213311.419.jpg&type=sc960_832" width="300" height="200" alt="">
-    <p><b>떴다 떴다</b> 비행기 <b>날아라 날아라</b><br/>
-    <b>높이 높이</b> 날아라 우리 <i>비행기</i></p>
+    <div class="air">
+        <p><b>떴다 떴다</b> 비행기 <b>날아라 날아라</b><br/>
+        <b>높이 높이</b> 날아라 우리 <i>비행기</i></p>
+    </div class="air">
     <hr>
 
-    <h1><a href="https://vibe.naver.com/track/27345147" target="_blank">송아지</a></h1>
+    <h1><a href="https://vibe.naver.com/track/27345147" target="_blank" id="cow">송아지</a></h1>
     <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fshop1.phinf.naver.net%2F20220615_38%2F1655270964353tFKzv_JPEG%2FS20220609203523263362a1dafbe4598_4.jpg&type=sc960_832" width="300" height="200" alt="">
-    <p><b>송아지 송아지</b> 얼룩 송아지<br/>
-    엄마소도 얼룩소 엄마 <i>닮았네</i></p>
+    <div class="cow">
+        <p><b>송아지 송아지</b> 얼룩 송아지<br/>
+        엄마소도 얼룩소 엄마 <i>닮았네</i></p>
+    </div>
     <hr>
 
 </body>
