--- a/ex_song.html
+++ b/ex_song.html
@@ -8,7 +8,7 @@
     <style>
         div {margin: 30px;}
         #rab {color: red;}
-        #air {color: blue;}
+        #air {color: yellow;}
         #cow {color: brown;}
         .rab {background-color: grey;
             color: white;}
