--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     
         <div class="box2_ CSS" style="background-color:lightgray;">
             <p>CSS란? Cascading stlye sheet 의 약자로 HTML페이지 스타일을 지정해 주는 스타일 시트이다.</p>
+            <ul>
+                <li><a href="css_선택자.html">CSS선택자</a></li>
+            </ul>
         </div>
     
         <div class="box3_JS" style="background-color:gray;">
