--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
         <p>학습을 하면서 예제를 만들었던 파일 모음</p>
         <ul>
             <li><a href="ex_song.html">동요모음</a></li>
+            <li><a href="ex_form001.html">수강신청</a></li>
+            <li><a href="ex_form002.html">주문서작성</a></li>
+            <li><a href="ex_star.html">별헤는밤</a></li>
         </ul>
     </div>
 
