--- a/css_글자속성.html
+++ b/css_글자속성.html
@@ -11,6 +11,167 @@
     <p>글자에 관련된 속성은 글꼴, 글자크기, 글자굵기, 기울임, 줄간격, 대소문자, 글자색상 등
         주된 7가지를 필수적으로 알고 있어야 함
     </p>
+    <em>color를 제외한 6가지는 한줄쓰기 가능</em>
+
+    <table border="1">
+        <tr>
+            <td>속성명</td>
+            <td>종류</td>
+            <td>설명</td>
+        </tr>
+        <tr>
+            <td>font-family</td>
+            <td>컴퓨터에 등록되어 있는 폰트명 / 웹폰트 활용 가능</td>
+            <td>글꼴을 인용부호에 감싼다<br>
+                다국적사용자를 대상으로 웹페이지를 제공할 때 
+                serif(명조,) Sans-serif(고딕체) 글꼴 마지막에 작성</td>
+        </tr>
+        <tr>
+            <td>font-size</td>
+            <td>수치에 px등의 단위를 붙여서 지정</td>
+            <td>기본 16px 100% 기준으로 사용</td>
+        </tr>
+        <tr>
+            <td>font-style></td>
+            <td>italic / normal</td>
+            <td>글자의 기울기 지정</td>
+        </tr>
+        <tr>
+            <td>font-variant</td>
+            <td>small-caps / normal</td>
+            <td>작은 대문자로 변경</td>
+        </tr>
+        <tr>
+            <td>font-weight</td>
+            <td>bold / normal 혹은 숫자 지정<br>
+                400이 기본값 / 600이상 볼드값</td>
+            <td>글자의 두께를 지정<br>
+                font의 종류에 따라 다르며 일정한 값은 아님</td>
+        </tr>
+        <tr>
+            <td>line-height</td>
+            <td>1은 100%의 값으로 줄간격 없음, 기본값은 1.4(140%)</td>
+            <td>글자의 높낮이인 행간을 조정</td>
+        </tr>
+    </table>
+    <br>
+
+    <strong>font 라는 속성으로 일렬쓰기 가능<br>
+        font : (font-weight, font-style, font-variant) (font-size/line-height) (font-family)<br>
+        세가지 순서대로 작성하되, 글자 크기와 글꼴은 생략 불가 <br>
+        (괄호) 안의 내용은 순서가 바뀔 수 있음 / 실제 작성시 괄호는 생략</strong>
     
+    <div class="box">
+        font라는 속성이 우선순위이며 나중에 위에 이름값과 같지 않더라도 덮어쓰기 가능
+    </div>
+
+    <h3>글자관련추가속성</h3>
+    <p>주로 글자나 단어보다는 문장에서 사용하는 속성</p>
+    <ul>
+        <li>text-aline
+            <ul>
+                <li>특징 - 왼쪽,오른쪽,가운데,양쪽정렬을 나타냄</li>
+                <li>주의사항 - 블럭요소에서만 사용 가능</li>
+                <li>justify는 내용안에 줄바꿈이 일어날 만큼 많은 글자양이 있을 경우 보임</li>
+            </ul>
+        </li>
+        <li>test-indent
+            <ul>
+                <li>특징 - 문단의 첫 머리 들여쓰기 기능</li>
+                <li>주의사항 - 블럭요소에서만 사용 가능 / px단위 사용</li>
+            </ul>
+    </li>
+        <li>text-decoration
+            <ul>
+                <li>underline - 밑줄</li>
+                <li>line-through - 가운데줄(취소선)</li>
+                <li>overline - 윗줄</li>
+                <li>none - 제거</li>
+            </ul>
+    </li>
+        <li>letter-spacing - 자간설정 / 단위적용</li>
+        <li>text-transform
+            <ul>
+                <li>uppercase - 모두 대문자 변경</li>
+                <li>lowercase - 모두 소문자 변경</li>
+                <li>capitalize - 첫 글자만 대문자</li>
+            </ul>
+        </li>
+    </ul>
+
+
+
+    <style>
+        .box {background-color: yellow;}
+    </style>
+    
+        <h2>예제</h2>
+    <div class="font">
+        <ul>
+            <li>lorem</li>
+            <li>lorem</li>
+            <li>lorem</li>
+            <li>lorem</li>
+            <li>loremLorem ipsum dolor sit amet consectetur adipisicing elit. <br> Aspernatur ipsa rerum pariatur, voluptatibus explicabo, <br> nam asperiores, tempora quod et numquam quae neque. <br> Libero ipsam reprehenderit ad! <br> Et esse est necessitatibus.</li>
+            <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br> Fugit eaque architecto eum laboriosam aliquam. <br> Aspernatur exercitationem, <br> nam inventore optio dicta nisi et alias voluptatem voluptatum omnis pariatur. Magni, odio modi!</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Magnam deserunt officia pariatur iusto tenetur <br> sed laborum expedita perspiciatis sint voluptatem, <br> rerum labore non temporibus repellat error ullam ad ipsa. Quas.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
+        </ul>
+    </div>
+
+    <div class="text">
+        <p class="left">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p class="right">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p class="justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores possimus sed quis deserunt, cupiditate officia praesentium ipsa aspernatur ut, quas, mollitia ratione repudiandae doloribus autem facilis quasi. Officiis, repellat rerum!</p>
+        <p class="indent">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, officia voluptate repellat dignissimos cum quis voluptatum error tempora quibusdam repellendus? Laboriosam, vel quos mollitia odit asperiores optio veniam. Iste, velit!</p>   
+        <ul class="dec">
+            <li>밑줄</li>
+            <li>가운데줄</li>
+            <li>윗줄</li>
+        </ul>
+    </div>
+
+    <p class="letter">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit dolorem libero, ad corrupti et doloremque! Eaque nam debitis porro exercitationem? Incidunt, inventore repellat nobis a atque dolor assumenda earum. Quos.
+    </p>
+
+    <ul class="trans">
+        <li>uppercase - 모두 대문자 변경</li>
+        <li>LOWERCASE - 모두 소문자 변경</li>
+        <li>capi talize - 첫 글자만 대문자</li>
+    </ul>
+
+    <style>
+        .trans>li:nth-child(1) {text-transform: uppercase;}
+        .trans>li:nth-child(2) {text-transform: lowercase;}
+        .trans>li:nth-child(3) {text-transform: capitalize;}
+
+
+        .letter {letter-spacing: 20px;}
+
+        .text p {background-color: beige;}
+        .text>.left {text-align: left}
+        .text>.right {text-align: right;}
+        .text>.center {text-align: center;}
+        .text>.jutify {text-align: justify;}
+        .text>.indent {text-indent: 50px;}
+
+        .dec>li {margin-bottom: 20px;}
+        .dec>li:nth-child(1) {text-decoration: underline;}
+        .dec>li:nth-child(2) {text-decoration: line-through;}
+        .dec>li:nth-child(3) {text-decoration: overline;}
+
+        .font>ul>li {font-family: 'Times New Roman', Times, serif;}
+        .font>ul>li:nth-child(1) {font-size: 20px;}
+        .font>ul>li:nth-child(2) {font-style: italic;}
+        .font>ul>li:nth-child(3) {font-variant: small-caps;}
+        .font>ul>li:nth-child(4) {font-weight: 600;}
+        .font>ul>li:nth-child(5) {line-height: 2;}
+        .font>ul>li:nth-child(6) {font:bold italic small-caps 10px/1 '맑은고딕'}
+        .font>ul>li:nth-child(7) {font:20px/2.5 '굴림'}
+        .font>ul>li:nth-child(8) {font:30px 'arial'}
+    </style>
+
 </body>
 </html>
