--- a/css_글자속성.html
+++ b/css_글자속성.html
@@ -173,5 +173,44 @@
         .font>ul>li:nth-child(8) {font:30px 'arial'}
     </style>
 
+    <!-- 연습해보기 -->
+
+    <div class="first">
+        <p class="one">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> 
+        <p class="two">Sit, officiis rerum fuga velit perferendis,</p> 
+        <p class="thr">debitis laborum quo quaerat sequi quam laboriosam voluptates nostrum. </p>
+    </div>
+
+    <ul class="second">
+        <li>Vel laboriosam facere impedit, saepe adipisci consectetur?</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+        <li>Incidunt voluptatibus fugiat soluta et ea ex corporis doloribus veritatis deserunt? </li>
+        <li>Nam, nobis sit!</li>
+    </ul>
+    <div class="third">
+        <ul>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li> 
+            <li>ea perspiciatis excepturi eos alias rem fugit modi nesciunt rerum vitae doloremque! </li>
+            <li>Molestias, sequi aut.</li>
+        </ul>
+    </div>
+
+    <style>
+        .first>.one {font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-style: italic;}
+        .first>.two {background-color: bisque; font-variant: small-caps;}
+        .first>.thr {font-size: 20px; color: brown;}
+
+        .second>li:nth-child(1) {text-decoration: line-through; color: gray;}
+        .second>li:nth-child(2) {text-decoration: underline; text-align: center; background-color:beige;}
+        .second>li:nth-child(3) {text-transform: capitalize;}
+        .second>li:nth-child(4) {text-transform: uppercase; font-weight: 600;}
+
+        .third>ul>li:nth-child(1) {letter-spacing: 20px; text-align: justify;}
+        .third>ul>li:nth-child(2) {margin-bottom: 20px; text-indent: 50px; margin-top: 20px;}
+        .third>ul>li:nth-child(3) {background-color: lightcoral; color: aliceblue; text-align: right;}
+
+
+    </style>
+
 </body>
 </html>
