--- a/layout003.html
+++ b/layout003.html
@@ -4,30 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>layout연습3</title>
+    <title>레이아웃연습</title>
+
     <!-- 그리드가이드연결 -->
     <link rel="stylesheet" href="grid-guide.css">
-    <!-- 외부스타일시트연결 -->
+    <!-- 외부스타일시트 -->
     <link rel="stylesheet" href="style_layout003.css">
 </head>
 <body>
-    <div class="box1">
-        <div class="box1-1">로고</div>
-        <div class="box1-2">메뉴</div>
-    </div>
-    <div class="box2">이미지슬라이드</div>
+    <div class="box1">header</div>
+    <div class="box2">nav</div>
     <div class="box3">
-        <div class="box3-1">공지사항/갤러리</div>
-        <div class="box3-2">배너</div>
-        <div class="box3-3">바로가기</div>
-    </div>
-    <div class="box4">
-        <div class="box4-1">로고</div>
-        <div class="box4-2">
-            <div class="boxA">하단메뉴</div>
-            <div class="boxB">Copyrights</div>
+        <div class="boxA">
+            <div class="boxA-1">section</div>
+            <div class="boxA-2">article</div>
         </div>
+        <div class="boxB">aside</div>
     </div>
-
+    <div class="box4">footer</div>
+    
 </body>
 </html>
