--- a/layout005_flex.html
+++ b/layout005_flex.html
@@ -41,8 +41,8 @@
         <div class="boxA-2">
             <div class="boxB">이미지슬라이드</div>
             <div class="boxC">
-                <div class="box3">공지사항</div>
-                <div class="box4">바로가기</div>
+                <div class="box3">공지사항공지사항공지사항공지사항공지사항공지사항공지사항공지사항</div>
+                <div class="box4">바로가기바로가기바로가기바로가기</div>
                 <div class="box5">갤러리</div>
             </div>
             <div class="boxD">
