--- a/doit/index.html
+++ b/doit/index.html
@@ -5,15 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML학습서_Doit!</title>
+    <!-- fontawesome link -->
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <!-- 외부스타일시트연결 -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/reset.css">
 </head>
 <body>
     <div id="wrap">
+        <section class="info_section">
+            <ul>
+                <li><a href="#"><i class="fa fa-home" aria-hidden="true"></i></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+            </ul>
+        </section>
         <header class="header">
-            <h1></h1>
-            <nav></nav>
+            <h1 class="logo"><a href="index.html">HTML<br>학습서</a></h1>
+            <nav class="nav">
+                <ul class="gnv">
+                    <li><a href="#">HOME</a><span class="sub_menu_toggle_btn">하위메뉴토글버튼</span></li>
+                    <li><a href="#">HTML</a><span class="sub_menu_toggle_btn">하위메뉴토글버튼</span></li>
+                    <li><a href="#">CSS</a><span class="sub_menu_toggle_btn">하위메뉴토글버튼</span></li>
+                    <li><a href="#">JAVASCRIPT</a><span class="sub_menu_toggle_btn">하위메뉴토글버튼</span></li>
+                </ul>
+            </nav>
+            <span class="menu_toggle_btn">전체메뉴토글버튼</span>
         </header>
+
         <section class="slider_section"></section>
         <section class="gallery_section"></section>
         <section class="rankup_section"></section>
