--- a/doit/index.html
+++ b/doit/index.html
@@ -15,7 +15,7 @@
 <body>
     <div id="wrap">
         <section class="info_section">
-            <ul>
+            <ul class="info_list">
                 <li><a href="#"><i class="fa fa-home" aria-hidden="true"></i></a></li>
                 <li><a href="#"><i class="fa fa-lock" aria-hidden="true"></i></a></li>
                 <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i></a></li>
