--- a/doit/index.html
+++ b/doit/index.html
@@ -14,18 +14,18 @@
 </head>
 <body>
     <div id="wrap">
-        <section class="info_section">
-            <ul class="info_list">
-                <li><a href="#"><i class="fa fa-home" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-lock" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
-            </ul>
-        </section>
         <header class="header">
+            <section class="info_section">
+                <ul class="info_list">
+                    <li><a href="#"><i class="fa fa-home" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-lock" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+                </ul>
+            </section>
             <h1 class="logo"><a href="index.html">HTML<br>학습서</a></h1>
             <nav class="nav">
-                <ul class="gnv">
+                <ul class="gnb">
                     <li><a href="#">HOME</a><span class="sub_menu_toggle_btn">하위메뉴토글버튼</span></li>
                     <li><a href="#">HTML</a><span class="sub_menu_toggle_btn">하위메뉴토글버튼</span></li>
                     <li><a href="#">CSS</a><span class="sub_menu_toggle_btn">하위메뉴토글버튼</span></li>
