--- a/doit/ex/ex_myintro1201.html
+++ b/doit/ex/ex_myintro1201.html
@@ -3,14 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>나의소개</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=no">
+    <title>aslgkfka</title>
     <!-- fontawesome link -->
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <script src="https://use.fontawesome.com/3ca5297d44.js"></script>
     <!-- stylesheet -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="ex_mystyle1201.css">
+    <!-- javascript -->
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <!-- javascript 동적구현 -->
+    <script>
+        //menu btn click, show gnb
+        $(document).ready(function(){
+            $('.menu_toggle_btn').click(function(){
+                $('.nav_list').slideToggle()})
+        })
+    </script>
 </head>
 <body>
     <div id="wrap">
@@ -33,12 +43,12 @@
                     <li><a href="#">DIARY</a><span class="sub_menu_toggle_btn">하위메뉴토글버튼</span></li>
                 </ul>
             </nav>
-            <span class="menu_toggle_btn"></span>
+            <span class="menu_toggle_btn">전체메뉴토글버튼</span>
         </header>
 
         <section class="slider_section">
-            <span class="prev_btn"><i class="fa fa-arrow-left" aria-hidden="true"></i></span>
-            <span class="next_btn"><i class="fa fa-arrow-right" aria-hidden="true"></i></span>
+            <span class="prev_btn">이전버튼</span>
+            <span class="next_btn">다음버튼</span>
         </section>
         <section class="gallery_section">
             <ul class="gallery_list">
