--- a/doit/index.html
+++ b/doit/index.html
@@ -62,7 +62,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#"">
+                    <a href="#">
                     <figure>
                         <img src="https://picsum.photos/800/500" alt="">
                         <figcaption>HTML바로가기</figcaption>
