--- a/doit/ex/ex_myintro1201.html
+++ b/doit/ex/ex_myintro1201.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <script src="https://use.fontawesome.com/3ca5297d44.js"></script>
     <!-- stylesheet -->
-    <link rel="stylesheet" href="ex_mystyle1201.css">
     <link rel="stylesheet" href="ex_mystyle1206.css">
+    <link rel="stylesheet" href="ex_mystyle01.css">
     <!-- javascript -->
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <!-- javascript 동적구현 -->
@@ -77,6 +77,12 @@
         </section>
         <section class="diary_section">
             <h2 class="diary_title">DIARY</h2>
+            <ul class="diary_list">
+                <li><a href="#">diary 00.00.00</a></li>
+                <li><a href="#">diary 11.11.11</a></li>
+                <li><a href="#">diary 22.22.22</a></li>
+                <li><a href="#">diary 33.33.33</a></li>
+            </ul>
         </section>
 
         <section class="banner_section">
