--- a/doit/ex/ex_myintro1201.html
+++ b/doit/ex/ex_myintro1201.html
@@ -71,17 +71,22 @@
         </section>
         <section class="schedule_section">
             <h2 class="schedule_title">SCHEDULE</h2>
+            <img src="../img/10996.png" alt="">
         </section>
-        <section class="profile_section">
-            <h2 class="profile_title">PROFILE</h2>
+        <section class="board_section">
+            <h2 class="board_title">BOARD</h2>
+            <div><span>daily</span> Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+            <div><span>reveiw</span>Reprehenderit aperiam tempora omnis iste corrupti. </div>
+            <div><span>daily</span>Quasi numquam praesentium consequatur aliquid. </div>
+            <div><span>cafe</span>Ad quia odio, eum eius repellendus quos vitae cum amet consequuntur.</div>
         </section>
         <section class="diary_section">
             <h2 class="diary_title">DIARY</h2>
             <ul class="diary_list">
-                <li><a href="#">diary 00.00.00</a></li>
-                <li><a href="#">diary 11.11.11</a></li>
-                <li><a href="#">diary 22.22.22</a></li>
-                <li><a href="#">diary 33.33.33</a></li>
+                <li><a href="#">diary 2022.01.01</a></li>
+                <li><a href="#">diary 2022.11.11</a></li>
+                <li><a href="#">diary 2022.12.12</a></li>
+                <li><a href="#">diary 2022.12.31</a></li>
             </ul>
         </section>
 
