--- a/doit/ex/ex_myintro1201.html
+++ b/doit/ex/ex_myintro1201.html
@@ -75,10 +75,12 @@
         </section>
         <section class="board_section">
             <h2 class="board_title">BOARD</h2>
-            <div><span>daily</span> Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
-            <div><span>reveiw</span>Reprehenderit aperiam tempora omnis iste corrupti. </div>
-            <div><span>daily</span>Quasi numquam praesentium consequatur aliquid. </div>
-            <div><span>cafe</span>Ad quia odio, eum eius repellendus quos vitae cum amet consequuntur.</div>
+            <ul class="board_list">
+            <li><i class="fa-solid fa-star-of-life"></i><span>daily</span> Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+            <li><i class="fa-solid fa-star-of-life"></i><span>reveiw</span>Reprehenderit aperiam tempora omnis iste corrupti.</li>
+            <li><i class="fa-solid fa-star-of-life"></i><span>daily</span>Quasi numquam praesentium consequatur aliquid.</li>
+            <li><i class="fa-solid fa-star-of-life"></i><span>cafe</span>Ad quia odio, eum eius repellendus quos vitae cum amet consequuntur.</li>
+            </ul>
         </section>
         <section class="diary_section">
             <h2 class="diary_title">DIARY</h2>
