--- a/cat_blog/index.html
+++ b/cat_blog/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cat Blog</title>
-    <!-- style sheet -->
-    <link rel="stylesheet" href="css/style.css">
-    <!-- my style sheet 
-    <link rel="stylesheet" href="css/mystylecat.css">-->
+    <!-- style sheet
+    <link rel="stylesheet" href="css/style.css"> -->
+    <!-- my style sheet -->
+    <link rel="stylesheet" href="css/mystylecat.css">
+
+    <script src="https://use.fontawesome.com/29f84cf8f7.js"></script> 
 </head>
 
 <body>
