--- a/cat_blog/index.html
+++ b/cat_blog/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cat Blog</title>
     <!-- style sheet
-    <link rel="stylesheet" href="css/style.css"> -->
-    <!-- my style sheet -->
-    <link rel="stylesheet" href="css/mystylecat.css">
+    <link rel="stylesheet" href="css/style.css">--> 
+    <!-- my style sheet-->
+    <link rel="stylesheet" href="css/mystylecat.css"> 
 
     <script src="https://use.fontawesome.com/29f84cf8f7.js"></script> 
 </head>
@@ -103,8 +103,8 @@
                 </p>
             </article>
 
-            <ul>
-                <li><a href="#">1</a></li>
+            <ul class="pagination">
+                <li class="current"><a href="#">1</a></li>
                 <li><a href="#">2</a></li>
                 <li><a href="#">3</a></li>
                 <li><a href="#">4</a></li>
