--- a/자바스크립트003.html
+++ b/자바스크립트003.html
@@ -13,10 +13,19 @@
 
     <ul>
         <li>조건문 - if문 -> if(조건형식){참일경우 실행문} else{거짓일경우 실행문}</li>
-        <li>반복문</li>
+        <li>반복문 
+            <ul>
+                <li>while문 - 변수설정 let i=0; while(i < 8){
+                    실행문; 증감식;  }</li>
+                <li>for문 - for(변수설정 let i=0; i < 8 증감식){
+                    실행문}</li>
+            </ul>
+        </li>
     </ul>
 
     <div class="ifclass"><a href="ex_js001.html">조건문예제 - 질의응답형식</a></div>
     <div class="ifclass"><a href="ex_js002.html">조건문예제 - 평균값내기 질의응답형식</a></div>
+    <div class="while01"><a href="ex_js003.html">반복문예제 - 숫자 1~10가지 출력하기(while문작성)</a></div>
+    <div class="for01"><a href="ex_js004.html">반복문예제 - 구구단2단작성</a></div>
 </body>
 </html>
