--- a/자바스크립트004.html
+++ b/자바스크립트004.html
@@ -66,7 +66,7 @@
         let box1 = document.getElementsByClassName('box1')[0];
         let box = document.getElementsByClassName('current');
         let list = document.querySelector('.box1>ul>li');
-        let listAll = document.querySelectorAll('.box2 li');
+        let listAll = document.querySelectorAll('.box2>ul>li');
 
 
         ex.style.color = '#ffffff'
@@ -74,8 +74,103 @@
         box[1].style.background = '#ff0000'
         list.style.color = '#000'
         listAll.style.color = '#000';
+        listAll.item(1).style.background = '#000';
+
+    </script>
+
+    <h2>Event</h2>
+    <p>선택자 혹은 도큐먼트상에서 행동을 가했을때 발생되는 현상</p>
+    <table border="1">
+        <tr>
+            <td>이벤트</td>
+            <td>설명</td>
+        </tr>
+        <tr>
+            <td>click</td>
+            <td>마우스를 클릭했을때 이벤트 발생</td>
+        </tr>
+        <tr>
+            <td>mouseover</td>
+            <td>마우스가 오버했을때 이벤트 발생</td>
+        </tr>
+        <tr>
+            <td>mousemove</td>
+            <td>마우스가 움직였을때 이벤트 발생</td>
+        </tr>
+        <tr>
+            <td>mouseenter</td>
+            <td>마우스가 들어갔을때 이벤트 발생</td>
+        </tr>
+        <tr>
+            <td>mouseleave</td>
+            <td>마우스가 떠났을때 이벤트 발생</td>
+        </tr>
+
+        <tr>
+            <td>submit</td>
+            <td>submit을 눌렀을때 이벤트 발생</td>
+        </tr>
+        <tr>
+            <td>load</td>
+            <td>페이지를 열었을때 이벤트 발생</td>
+        </tr>
+        <tr>
+            <td>resize</td>
+            <td>사이즈가 변경되었을때 이벤트 발생</td>
+        </tr>
+        <tr>
+            <td>scroll</td>
+            <td>스크롤바가 움직였을때 이벤트 발생</td>
+        </tr>
+
+    </table><br>
+
+    <div class="ex002">
+        <!-- inline 방식의 이벤트 구현 -->
+        <button onclick="showTxt()">click me</button>
+        <p></p>
+        <p></p>
+        <p></p>
+        <button onclick="letsPrac()">연습해봅시다</button>
+    </div>
+
+    <!-- addEventListener -->
+    <button id="btn">직접연결창</button>
+
+    <script>
+        function showTxt() {
+
+            let show = document.querySelector('.ex002>p').innerHTML 
+            if(show=='Hello'){
+                document.querySelector('.ex002>p').innerHTML = ''
+            }
+            else if(show=='') {
+                document.querySelector('.ex002>p').innerHTML = 'Hello'
+            }
+        }
 
 
+        function letsPrac() {
+            let show = document.querySelector('.ex002>p').innerHTML
+            if(show== '<h2>자바 연습중</h2>'){
+                document.querySelector('.ex002>p').innerHTML = ''
+                document.querySelector('body').style.background = '#fff'
+                document.querySelector('body').style.color = '#000'
+                document.querySelector('body').style.fontWeight = 'normal'
+            }
+            else if(show==''){
+                document.querySelector('.ex002>p').innerHTML = '<h2>자바 연습중</h2>'
+                document.querySelector('body').style.background = '#483D8B'
+                document.querySelector('body').style.color = '#F0F8FF'
+                document.querySelector('body').style.fontWeight = 'bold'
+            }
+        }
+
+
+        document.getElementById('btn').addEventListener('click',
+        function(Event){
+            alert('성공하셨습니다!')
+        })
 
     </script>
 
